<resources>
    <string name="app_name">FragmentsDemo</string>
    <string name="nav_header_title">Fragments Demo</string>
    <string name="nav_header_subtitle">fragment.demo@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_components">Components</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_components">Components</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="main_page_title">Dashboard</string>
    <string name="btn_contacts">Open Contacts</string>
    <string name="btn_specific_contact">Open Specific Contact</string>
    <string name="btn_dial">Open Dialer</string>
    <string name="btn_camera">Open Camera</string>
    <string name="btn_browser">Open Browser</string>
    <string name="btn_logout">Logout</string>
    <string name="contacts_not_found">Contacts application not found.</string>
    <string name="dialer_not_found">Dialer application not found.</string>
    <string name="camera_not_found">Camera application not found.</string>
    <string name="browser_not_found">Browser application not found.</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_start_music">Start Music</string>
    <string name="btn_stop_music">Stop Music</string>
    <string name="btn_download">Background Downloader</string>
</resources>